discussion/kv_engine/163012/163012_rev21_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47604: Implicit compaction support for NexusKVStore

We want to make all comparisons possible, but without limiting the set
of features that the underlying KVStores support. Magma implicit
compaction will potentially purge items that the other KVStore has not
yet purged on a background thread. We don't want to disable it as it is
instrumental to the way in which magma buckets work, so we track a
purgeSeqno which tells us the highest seqno purged (any seqno lower may
have been purged and the result of any such comparison may be
different). We track only one purge seqno here (the highest seqno
purged by any KVStore) rather than one per KVStore as the comparison is
only guaranteed to be valid if the seqno is higher than the purge seqno
of both KVStores.

Change-Id: I965b1323e7a8d85cb3f4d70ad7698318503f33c7

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-11-18 13:21:44.000000000
Message: 
Uploaded patch set 21.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-11-18 13:37:38.000000000
Message: 
Patch Set 21: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41863/ : FAILURE

Compile error at C:\Program Files (x86)\Microsoft Visual Studio\2017\Professional\VC\Tools\MSVC\14.16.27023\include\memory(2539): error C2661: "FrontEndBGFetchItem::FrontEndBGFetchItem": no overloaded function takes 2 arguments ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41863/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14074/ : FAILURE

clang-tidy found the following problems:

<pre>
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:962:34: error: no matching constructor for initialization of "FrontEndBGFetchItem" [clang-diagnostic-error]
    { return unique_ptr<_Tp>(new _Tp(std::forward<_Args>(__args)...)); }
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/nexus_kvstore_test.cc:281:37: note: in instantiation of function template specialization "std::make_unique<FrontEndBGFetchItem, CookieIface *&, ValueFilter>" requested here
    bgfetch_itm_ctx.addBgFetch(std::make_unique<FrontEndBGFetchItem>(
                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_bgfetch_item.h:84:7: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 2 were provided
class FrontEndBGFetchItem : public BGFetchItem {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_bgfetch_item.h:84:7: note: candidate constructor (the implicit move constructor) not viable: requires 1 argument, but 2 were provided
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_bgfetch_item.h:86:5: note: candidate constructor not viable: requires 3 arguments, but 2 were provided
    FrontEndBGFetchItem(const CookieIface* cookie,
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_bgfetch_item.h:93:5: note: candidate constructor not viable: requires 4 arguments, but 2 were provided
    FrontEndBGFetchItem(std::chrono::steady_clock::time_point initTime,
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14074/ )

Compile error at /opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:962:34:
error: no matching constructor for initialization of "FrontEndBGFetchItem" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14074/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3706/ : FAILURE

Compile error at [2021-11-18T13:25:24.987Z] /opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:962:34:
error: no matching constructor for initialization of "FrontEndBGFetchItem"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3706/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3783/ : FAILURE

Compile error at [2021-11-18T13:30:21.433Z] /opt/gcc-10.2.0/include/c++/10.2.0/bits/unique_ptr.h:962:30:
error: no matching function for call to ?FrontEndBGFetchItem::FrontEndBGFetchItem(CookieIface*&, ValueFilter)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3783/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15697/ : FAILURE

Compile error at [2021-11-18T13:26:41.259Z] /opt/gcc-10.2.0/include/c++/10.2.0/bits/unique_ptr.h:962:30:
error: no matching function for call to ?FrontEndBGFetchItem::FrontEndBGFetchItem(CookieIface*&, ValueFilter)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15697/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15978/ : FAILURE

Compile error at [2021-11-18T13:26:28.773Z] /opt/gcc-10.2.0/include/c++/10.2.0/bits/unique_ptr.h:962:30:
error: no matching function for call to ?FrontEndBGFetchItem::FrontEndBGFetchItem(CookieIface*&, ValueFilter)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15978/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16706/ : FAILURE

Compile error at [2021-11-18T13:25:12.783Z] /opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:962:34:
error: no matching constructor for initialization of "FrontEndBGFetchItem"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16706/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14867/ : FAILURE

Compile error at [2021-11-18T13:27:13.646Z] /Library/Developer/CommandLineTools_11.3.1/usr/bin/../include/c++/v1/memory:3132:32:
error: no matching constructor for initialization of "FrontEndBGFetchItem"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14867/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24063/ : FAILURE

Compile error at [2021-11-18T13:32:06.003Z] /opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:962:34:
error: no matching constructor for initialization of "FrontEndBGFetchItem"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24063/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35548/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12881/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
